# medical-research-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5465da9329d9_add_projects_documents_chunks_chat_.py  c95d28b8590e_baseline_schema.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: architecture.md  claude-code-verification-prompt.md
evaluations/: README.md  __init__.py  cli.py  fixtures.py  metrics.py  models.py  report.py  runner.py
evaluations/datasets/: keratoconus_gold.json  semaglutide_t2d_gold.json
evaluations/fixtures/keratoconus_crosslinking/: crossref_40340672.json  crossref_40630024.json  crossref_41758421.json  efetch.xml  esearch.json
evaluations/fixtures/semaglutide_t2d/: crossref_42173109.json  crossref_42259343.json  crossref_42319968.json  efetch.xml  esearch.json
frontend/: app.py  transforms.py
src/medical_research_agent/: __init__.py  citation_utils.py  config.py  logging_config.py
src/medical_research_agent/agents/: __init__.py  base.py  crossref_enrichment.py  evidence_evaluator.py  paper_reader.py  pubmed_search.py  query_understanding.py  study_comparator.py  summary.py
src/medical_research_agent/api/: main.py  rate_limit.py  schemas.py
src/medical_research_agent/database/: __init__.py  models.py  project_repository.py  repository.py  session.py
src/medical_research_agent/graphs/: __init__.py  research_graph.py
tests/: conftest.py  test_agent_crossref_enrichment.py  test_agent_evidence_evaluator.py  test_agent_paper_reader.py  test_agent_pubmed_search.py  test_agent_query_understanding.py  test_agent_study_comparator.py  test_agent_summary.py  test_api_projects.py  test_api_research.py  test_citation_utils.py  test_crossref_service.py  test_database_project_repository.py  test_database_repository.py  test_evaluation_metrics.py  test_evaluation_runner.py  test_frontend_transforms.py  test_health.py  test_llm_factory.py  test_models.py  test_pubmed_service.py  test_research_graph.py  test_services_embeddings.py  test_services_pdf_extraction.py  test_services_project_chat.py
tests/fixtures/: pubmed_efetch_sample.xml
(+20 files in other folders)
