[project]
name = "medical-research-agent"
version = "0.1.0"
description = "Multi-agent biomedical evidence synthesis system for clinicians and researchers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Medical Research Agent Contributors" }]

dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Agent orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-groq>=0.2",
    # Data / HTTP
    "httpx>=0.27",
    "tenacity>=9.0",
    "lxml>=5.2",                # robust PubMed XML parsing
    # Persistence
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    # Frontend
    "streamlit>=1.37",
    "pandas>=2.2",
    # Observability / utils
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",             # httpx mocking
    "ruff>=0.6",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_research_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy.*", "pandas.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --cov=medical_research_agent --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "live: hits real external APIs (NCBI/CrossRef); skipped unless NCBI_EMAIL is set",
]

[tool.coverage.run]
branch = true
source = ["src/medical_research_agent"]
